--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ const thebe_selector_output = ".output, .cell_output"
 
 
   <div class="bd-header-announcement container-fluid bd-header-announcement">
-    <div class="bd-header-announcement__content">This is a work in progress...</div>
+    <div class="bd-header-announcement__content">⚠️ This is a work in progress. ⚠️</div>
   </div>
 
   
