--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   <div class="footer-item">
     
 <p class="component-author">
-By Author
+By Author_Name
 </p>
 
   </div>
